--- a/assets/css/general/icons.css
+++ b/assets/css/general/icons.css
@@ -1,7 +1,9 @@
 .icon {
+    display: inline-block;
     width: 20px;
     height: 20px;
     fill: currentColor;
+    vertical-align: -0.125em;
 }
 
 .icon-loading {
